[package]
name = "gtr"
version = "0.0.8"
edition = "2021"
author = "dzdidi"
about = "decentralized colaborative change management system"
repository = "https://github.com/RandyMcMillan/gtr"
homepage = "https://github.com/RandyMcMillan/gtr"
description = "rust implementation of gittorrent"

[dependencies]
async-trait = "0.1"
regex = "1"
# command line parsing utility
clap = { version = "4.0", features = ["cargo"] }
# async
# TODO: check what exactly is needed
tokio = { version = "1", features = ["full"] }

# toml parser
toml = { version = "0.5.3" }
# serialize/deserialize
serde = { version = "1.0", features = ["derive"] }
# bittorrent dht infrastructure dependencies
bip_dht = { version = "0.6.0", optional = true }
bip_handshake = { version = "0.7.1", optional = true }
bip_util = { version = "0.5.0", optional = true }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3.1.3"

[[test]]
name = "e2e_tests"
path = "tests/e2e_tests.rs"


[features]
torrent = ["dep:bip_dht", "dep:bip_handshake", "dep:bip_util"]
nostr = []
https_ssl = []
holepunch = []
scuttlebutt = []
gnunet = []

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

